@@ -3,6 +3,8 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.2
 
+	- The scheduler did not preserve default options that contained special
+	  characters (STR #3340)
 	- The scheduler did not remove old pre-filters when updating a printer
 	  driver (STR #3342)
 	- The HP/GL-2 filter did not check for early end-of-file (STR #3319)
